fix: make nav list flex wrap

--- a/src/styles/minimal.css
+++ b/src/styles/minimal.css
@@ -41,6 +41,7 @@ h3 {
   padding: 0;
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
